--- a/src/main/resources/static/assets/styles/main.css
+++ b/src/main/resources/static/assets/styles/main.css
@@ -1,3 +1,16 @@
 .button {
     margin: 0.5rem;
 }
+
+main {
+    margin-top: 1.5rem;
+}
+
+.round {
+    border-radius: 50%;
+    width: 8rem;
+}
+
+header > a {
+    margin: 0.5rem;
+}
